2006-02-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-tool-bar-gnome): Add
	gnus-summary-next-page.  Re-order.

	* gnus-group.el (gnus-group-tool-bar-gnome): prev-node and
	next-node are now included.
	(gnus-group-redraw-line-number): New internal variable.
	(gnus-group-redraw-check): Helper function for updating the tool
	bar.
	(gnus-group-tool-bar-update): Add gnus-group-redraw-check.

	* gmm-utils.el (gmm-tool-bar-item): Add TODO about modifiers.

	* spam.el (spam-spamassassin-score-regexp): New internal variable.
	(spam-extra-header-to-number, spam-check-spamassassin-headers):
	Use it to match format of Spamassassin 3.0 and later.  Reported by
	IRIE Tetsuya <irie@t.email.ne.jp>.
	(spam-check-bogofilter)
	(spam-bogofilter-register-with-bogofilter): Fix args of
	`gnus-error' calls.

2006-02-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-sequence-of-unread-articles): Return nil if
	first or last are nil.

2006-02-24  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* nnweb.el (nnweb-gmane-create-mapping): Don't choke on ^M.

2006-02-20  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-open-server): Respect gnus-batch-mode.

2005-12-20  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dns.el (query-dns): Protect more against buggy tcp output.

2006-02-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnweb.el (nnweb-type-definition, nnweb-gmane-search): Use new
	nov.php.

2006-02-24  Andreas Seltenreich  <uwi7@stud.uni-karlsruhe.de>

	* nnweb.el (nnweb-type-definition, nnweb-gmane-create-mapping)
	(nnweb-gmane-wash-article, nnweb-gmane-search): Fix Gmane web
	groups.  Kudos to Olly Betts <olly@survex.com> for providing NOV
	output on the server side.
        (nnweb-google-create-mapping): Update regexps and add some
	progress indication.

2006-02-23  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-group.el (gnus-group-tool-bar-gnome): Fix
	gnus-agent-toggle-plugged.  Re-order icons.
	(gnus-group-tool-bar-gnome): Add