@@ -1,5 +1,8 @@
 2006-02-28  Reiner Steib  <Reiner.Steib@gmx.de>
 
+	* gnus-art.el (gnus-button): New face.
+	(gnus-article-button-face): Use it.
+
 	* gnus-sum.el (gnus-summary-tool-bar-gnome): Add
 	gnus-summary-next-page.  Re-order.
 
